--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Scott Robertson</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/resume">Resume</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Scott Robertson!</h1>
-				<p>This is a test page for my first git commit.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:test@testing.com">email</a></li>
-        		<li><a href="https://github.com/sc0tt5">https://github.com/sc0tt5</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Scott Robertson
+---
+<div class="blurb">
+	<h1>Hi there, I'm Scott Robertson!</h1>
+	<p>Testings things out for my GitHub page.</p>
+</div><!-- /.blurb -->
